# repoinsight

./: .env.example  .gitignore  CLAUDE.md  DEMO.md  INTERVIEW.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
src/repoinsight/: __init__.py  app.py  config.py  crew.py  llm.py  main.py  state.py
src/repoinsight/config/: agents.yaml  tasks.yaml
src/repoinsight/eval/: quality_check.py
src/repoinsight/memory/: graph_store.py  vector_store.py
src/repoinsight/tools/: doc_tools.py  repo_tools.py  review_tools.py  security_tools.py
tests/: test_tools.py
tests/fixtures/sample_repo/sample_pkg/: __init__.py  main.py  utils.py
